--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Maven
-target/
+# target/ - Commented out per user request to include target directory
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -42,6 +42,6 @@ spark-warehouse/
 metastore_db/
 derby.log
 
-# JAR files (build artifacts)
-*.jar
-!target/*.jar
+# JAR files (build artifacts) - Commented out per user request
+# *.jar
+# !target/*.jar
