Add Constant Columns configuration section to migration.properties
- Added documentation and example configuration for constant columns
- Includes examples for basic usage and custom delimiter
- Comments explain how to use the feature

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -156,3 +156,30 @@ table.target.table=dda_pstd_fincl_txn_cnsmr_by_accntnbr
 # Enable validation for this table
 table.validate=true
 
+# =============================================================================
+# Constant Columns (Default Values for Target Columns)
+# =============================================================================
+# Use this feature to populate audit fields or other columns in the target table
+# that don't exist in the source table.
+#
+# Format:
+#   table.constantColumns.names=<column1>,<column2>,<column3>
+#   table.constantColumns.values=<value1>,<value2>,<value3>
+#   table.constantColumns.splitRegex=, (optional, defaults to comma)
+#
+# Notes:
+# - Column names must exist in the TARGET table schema
+# - Values are written as strings in CSV (YugabyteDB will validate types)
+# - String values should be provided without outer quotes (they'll be escaped automatically)
+# - Numeric values (INT, BIGINT, etc.) should be provided as numbers (no quotes)
+# - Boolean values: true or false (no quotes)
+#
+# Example (commented out - uncomment and configure as needed):
+# table.constantColumns.names=created_by,migration_date,source_system
+# table.constantColumns.values=CDM_MIGRATION,2024-12-16,CASSANDRA_PROD
+#
+# Example with custom delimiter (if values contain commas):
+# table.constantColumns.names=migration_tags,migration_metadata
+# table.constantColumns.values=['source_cassandra','env_prod']|{'migrator':'CDM','version':'4.0'}
+# table.constantColumns.splitRegex=\\|
+
