Add partition logging to detect duplicate data processing
- Added logging to track sample primary keys per partition
- Logs first 100 primary keys processed by each partition
- Helps identify if multiple partitions process same data
- Added analysis script to check for overlapping PKs across partitions
- Includes partition ID and mode (COPY/INSERT) in logs

This helps diagnose duplicate key violations by identifying
if token ranges overlap between Spark partitions.

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -71,6 +71,13 @@ yugabyte.loginTimeout=10
 # Format: region1.zone1,region2.zone1
 # yugabyte.topologyKeys=
 
+# YugabyteDB Insert Mode Configuration
+# Options: COPY (default, faster) or INSERT (idempotent, handles duplicates)
+# COPY: Uses COPY FROM STDIN (fastest, but fails on duplicates)
+# INSERT: Uses INSERT ... ON CONFLICT DO NOTHING (idempotent, safe for retries/resumes)
+yugabyte.insertMode=COPY
+yugabyte.insertBatchSize=1000
+
 # YugabyteDB COPY Settings (Optimized for 10K+ IOPS)
 yugabyte.copyBufferSize=100000
 yugabyte.copyFlushEvery=50000
