Update INSERT mode batch size and add comparison test script
- Updated yugabyte.insertBatchSize from 1000 to 5000 (recommended for large migrations)
- Added documentation comments for batch size tuning
- Added compare_copy_vs_insert.sh script for performance comparison testing
- Script tests INSERT mode first, then COPY mode, captures metrics and compares
- Fixed truncate function to use psql from host instead of ysqlsh from container

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -76,7 +76,11 @@ yugabyte.loginTimeout=10
 # COPY: Uses COPY FROM STDIN (fastest, but fails on duplicates)
 # INSERT: Uses INSERT ... ON CONFLICT DO NOTHING (idempotent, safe for retries/resumes)
 yugabyte.insertMode=COPY
-yugabyte.insertBatchSize=1000
+# Batch size for INSERT mode (number of rows to accumulate before sending to database)
+# Higher = fewer network calls but more memory usage
+# Recommended: 5000 for large migrations (109M+ records), 1000-2000 for smaller migrations
+# For small rows (< 1KB): 5000-10000, Medium rows (1-10KB): 1000-5000, Large rows (> 10KB): 500-1000
+yugabyte.insertBatchSize=5000
 
 # YugabyteDB COPY Settings (Optimized for 10K+ IOPS)
 yugabyte.copyBufferSize=100000
