Fix: Change insertMode from COPY to INSERT to handle duplicates
- Changed yugabyte.insertMode from COPY to INSERT
- INSERT mode uses ON CONFLICT DO NOTHING to handle duplicates gracefully
- Fixes duplicate key violation errors

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -75,7 +75,7 @@ yugabyte.loginTimeout=10
 # Options: COPY (default, faster) or INSERT (idempotent, handles duplicates)
 # COPY: Uses COPY FROM STDIN (fastest, but fails on duplicates)
 # INSERT: Uses INSERT ... ON CONFLICT DO NOTHING (idempotent, safe for retries/resumes)
-yugabyte.insertMode=COPY
+yugabyte.insertMode=INSERT
 # Batch size for INSERT mode (number of rows to accumulate before sending to database)
 # Higher = fewer network calls but more memory usage
 # Recommended: 5000 for large migrations (109M+ records), 1000-2000 for smaller migrations
