Reduce INSERT batch size from 5000 to 300 to fix YugabyteDB errors
- Fix 'Snapshot too old' errors (batch size 5000 causes long transactions)
- Fix serialization conflicts (smaller batches = shorter transactions)
- Recommended for high-concurrency environments with 109M+ records

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -77,10 +77,12 @@ yugabyte.loginTimeout=10
 # INSERT: Uses INSERT ... ON CONFLICT DO NOTHING (idempotent, safe for retries/resumes)
 yugabyte.insertMode=INSERT
 # Batch size for INSERT mode (number of rows to accumulate before sending to database)
-# Higher = fewer network calls but more memory usage
-# Recommended: 5000 for large migrations (109M+ records), 1000-2000 for smaller migrations
-# For small rows (< 1KB): 5000-10000, Medium rows (1-10KB): 1000-5000, Large rows (> 10KB): 500-1000
-yugabyte.insertBatchSize=5000
+# IMPORTANT: Reduced to 300 to avoid "Snapshot too old" and serialization errors
+# Higher = fewer network calls but longer transactions (risk of snapshot expiration)
+# Lower = more network calls but shorter transactions (better for high-concurrency)
+# Recommended: 200-500 for high-concurrency environments, 500-1000 for stable environments
+# For small rows (< 1KB): 200-500, Medium rows (1-10KB): 200-300, Large rows (> 10KB): 100-200
+yugabyte.insertBatchSize=300
 
 # YugabyteDB COPY Settings (Optimized for 10K+ IOPS)
 yugabyte.copyBufferSize=100000
