Add yb_disable_transactional_writes session parameter support
- Add yugabyte.disableTransactionalWrites configuration property (default: false)
- Set yb_disable_transactional_writes = on after connection creation
- Applied to both COPY and INSERT modes for performance optimization
- Add documentation in migration.properties explaining trade-offs
- Warning: Disables ACID transaction guarantees (speed vs safety trade-off)

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -95,6 +95,13 @@ yugabyte.csvEscape="
 # YugabyteDB Transaction Settings
 yugabyte.isolationLevel=READ_COMMITTED
 yugabyte.autoCommit=false
+# Performance optimization: Disable transactional writes for faster bulk operations
+# WARNING: This disables ACID transaction guarantees - use only for bulk migrations
+# When enabled, sets: SET yb_disable_transactional_writes = on;
+# Benefits: Significantly faster COPY and INSERT operations
+# Trade-off: No transaction rollback capability, partial failures may leave inconsistent state
+# Recommended for: Bulk data migrations where speed > transaction safety
+yugabyte.disableTransactionalWrites=false
 
 # =============================================================================
 # Spark Job Configuration (Optimized for 10K+ IOPS)
