Configure migration.properties for 86M record migration
- Set yugabyte.insertMode=COPY (fast performance)
- Set yugabyte.copyReplace=true (idempotent upsert behavior)
- Set yugabyte.disableTransactionalWrites=true (maximum performance)
- Optimized configuration for large-scale migrations

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -97,7 +97,8 @@ yugabyte.csvEscape="
 # Use case: Resumable migrations where you want COPY speed with duplicate handling
 # Trade-off: REPLACES existing rows (updates them), not suitable if you need to skip duplicates
 # Recommended: Enable this for bulk migrations where COPY performance + idempotency is needed
-yugabyte.copyReplace=false
+# Set to true for 86M+ record migrations (fast COPY performance with idempotency)
+yugabyte.copyReplace=true
 
 # YugabyteDB Transaction Settings
 yugabyte.isolationLevel=READ_COMMITTED
@@ -108,7 +109,8 @@ yugabyte.autoCommit=false
 # Benefits: Significantly faster COPY and INSERT operations
 # Trade-off: No transaction rollback capability, partial failures may leave inconsistent state
 # Recommended for: Bulk data migrations where speed > transaction safety
-yugabyte.disableTransactionalWrites=false
+# Set to true for 86M+ record migrations (maximum performance)
+yugabyte.disableTransactionalWrites=true
 
 # =============================================================================
 # Spark Job Configuration (Optimized for 10K+ IOPS)
