Set insertMode to COPY for testing COPY WITH REPLACE

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -75,7 +75,7 @@ yugabyte.loginTimeout=10
 # Options: COPY (default, faster) or INSERT (idempotent, handles duplicates)
 # COPY: Uses COPY FROM STDIN (fastest, but fails on duplicates)
 # INSERT: Uses INSERT ... ON CONFLICT DO NOTHING (idempotent, safe for retries/resumes)
-yugabyte.insertMode=INSERT
+yugabyte.insertMode=COPY
 # Batch size for INSERT mode (number of rows to accumulate before sending to database)
 # IMPORTANT: Reduced to 300 to avoid "Snapshot too old" and serialization errors
 # Higher = fewer network calls but longer transactions (risk of snapshot expiration)
