Add CURRENTTIMESTAMP constants and toggle truncation

--- a/src/main/resources/migration.properties
+++ b/src/main/resources/migration.properties
@@ -52,6 +52,8 @@ yugabyte.port=5433
 yugabyte.database=transaction_datastore
 yugabyte.username=yugabyte
 yugabyte.password=yugabyte
+# Truncate target table before migration (default: true)
+# yugabyte.truncateTargetTable=true
 
 # YugabyteDB Connection Pool Settings
 yugabyte.maxPoolSize=8
@@ -202,10 +204,15 @@ table.validate=true
 # - String values should be provided without outer quotes (they'll be escaped automatically)
 # - Numeric values (INT, BIGINT, etc.) should be provided as numbers (no quotes)
 # - Boolean values: true or false (no quotes)
+# - For timestamp columns, use CURRENTTIMESTAMP or CURRENT_TIMESTAMP to auto-populate the current time
 #
 # Example (commented out - uncomment and configure as needed):
 # table.constantColumns.names=created_by,migration_date,source_system
 # table.constantColumns.values=CDM_MIGRATION,2024-12-16,CASSANDRA_PROD
+#
+# Example with current timestamp:
+table.constantColumns.names=created_by,migration_ts
+table.constantColumns.values=CDM_MIGRATION,CURRENTTIMESTAMP
 #
 # Example with custom delimiter (if values contain commas):
 # table.constantColumns.names=migration_tags,migration_metadata
